@@ -1,11 +1,0 @@
-Day,Shift,Run,Comment
-1,Day,4,Very dirty
-1,Evening,15,Dirty
-1,Evening,25,Dirty
-1,Evening,4,Dirty
-2,Evening,14,Very dirty
-2,Evening,9,Very dirty
-3,Day,9,Plate compromised
-3,Day,10,Discarded
-3,Day,11,Discarded
-3,Day,12,Discarded
